--- a/src/productos.css
+++ b/src/productos.css
@@ -6,7 +6,7 @@
   }
   
   .productos-section h2 {
-    font-size: 2rem;
+    font-size: 3rem;
     margin-bottom: 1.5rem;
     color: whitesmoke;
   }
@@ -35,6 +35,7 @@
   .proveedor-link:hover {
     transform: translateY(-5px);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
   }
   
   .proveedor-imagen {
