agregando boton wpp

--- a/src/contacto.css
+++ b/src/contacto.css
@@ -1,7 +1,8 @@
 #contacto {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
+    height: 85vh;
 }
 
 h1 {
