--- a/src/hero.css
+++ b/src/hero.css
@@ -2,6 +2,7 @@
 section {
     position: relative;
     width: 100%;
+    height: 100vh;
     align-items: center;
     text-align: center;
     color: white;
@@ -182,13 +183,14 @@ section {
   }
 
   .parallax-inner{
-    padding: 10% 0;
+    padding: 13% 0;
     background: rgba(0, 0, 0, 0.397);
   }
 
   section > h2, section > p {
-    background: #00162c00;
-    padding: 1rem;
-    margin: 0 3rem;
-    border-radius: 20px;
+    background: #002850;
+    padding: 1.5rem 15rem;
+    margin: 0 0;
+    width: 100vw;
   }
+
