--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,11 @@ h1, h2, h3, h4 {
   }
 }
 
-
+    /* Estilos para el boton de WhatsApp */
+    .wpp-button {
+      position: fixed;
+      right: 10%;
+      bottom: 1%;
+    }
 
 
