--- a/src/nav.css
+++ b/src/nav.css
@@ -57,4 +57,8 @@ nav {
     background-color: white;
     border-radius: 2px;
   }
+
+  .top-wrapper, .nav-wrapper, .nav-item {
+    background-color: transparent;
+  }
   
