--- a/src/productos.css
+++ b/src/productos.css
@@ -42,9 +42,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 1.3rem;
   transition: all 0.3s ease;
   color: whitesmoke;
   text-decoration: none;
+}
+
+.proveedor-card > h3 {
+  margin: auto auto;
 }
 
 .categoria-card:hover,
@@ -62,7 +67,7 @@
   width: 100%;
   max-height: 180px;
   object-fit: contain;
-  margin-bottom: 1rem;
+  margin: 1rem;
   border-radius: 8px;
 }
 
