--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500;600;700&family=Barlow:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 
 :root {
   line-height: 1.5;
@@ -38,11 +39,14 @@ body {
   }
 }
 
-    /* Estilos para el boton de WhatsApp */
-    .wpp-button {
-      position: fixed;
-      right: 10%;
-      bottom: 1%;
-    }
+/* Estilos para el boton de WhatsApp */
+.wpp-button {
+  position: fixed;
+  right: 5%;
+  bottom: 1%;
+  img {
+    height: 80px;
+  }
+}
 
 
