solucionando links e historial de navegador con react router dom

--- a/src/hero.css
+++ b/src/hero.css
@@ -116,6 +116,11 @@ section {
     background-color: #005bb5;
   }
 
+  .swiper-cta {
+    width: 100%;
+    height: 100%;
+  }
+
   /* Estilos para slides comerciales */
 .slide-promo {
   background: url(./assets/inner-local-plafon.jpg) top/cover;
