--- a/src/contacto.css
+++ b/src/contacto.css
@@ -90,11 +90,22 @@
 
 /* Responsive */
 @media (max-width: 768px) {
+  .contacto-section {
+    padding: 1rem 0;
+  }
   .contacto-title {
     font-size: 2.2rem;
   }
   
   .contacto-grid {
     grid-template-columns: 1fr;
+    width: 90%;
+    margin: 1rem auto;
+
+  }
+
+  .contacto-card {
+    width: 100%;
+    padding: 2rem 1rem;
   }
 }
